--- a/gbg/eggs/index.html
+++ b/gbg/eggs/index.html
@@ -11,8 +11,7 @@
 <body>
     <div style="margin:20px">
 <br/>
-<br/><p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+<br/><p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
 <p class="center">
 <audio controls src="../../log/audio/zander.wav" autoplay loop></audio><br />
 </p>
@@ -22,6 +21,12 @@
 <a href="../1">the</a> <a href="../2">eggs</a> <a href="../dash">of</a> <a href="../3">time</a>
 </p>
 </h1>
+<br />
+<h5>
+<p class="center">
+music by Zander Raymond
+</p>
+</h5>
 </div>
 </body>
 </html><!doctype html>
