--- a/words/index.html
+++ b/words/index.html
@@ -13,6 +13,7 @@
 <br/>
 <br/><p><a href="../"><img src="words.jpeg" alt="" /></a></p>
 <h1>words</h1>
+<p><a href="https://www.action-spectacle.com/">Action, Spectacle</a> <a href="https://www.action-spectacle.com/summer-2025-1">Summer 2025 Volume</a> <a href="https://www.action-spectacle.com/summer-2025-part-i">Part I</a>: <a href="https://www.action-spectacle.com/summer-2025-part-i/hazard">&quot;carve&quot;</a></p>
 <p><a href="https://moonstone-arts-center.square.site/">Moonstone Arts</a> <a href="https://moonstone-arts-center.square.site/product/featured-poets-2024/517?cs=true&amp;cst=custom">2024 Featured Poets Anthology</a></p>
 <p><a href="https://atwhatcost.me/">At What Cost</a> <a href="https://catalogs.atwhatcost.me/">Catalog</a> 1: <a href="https://obsession.atwhatcost.me/">OBSESSION</a>: <a href="https://obsession.atwhatcost.me/mandy-gutmann-gonzalez-and-william-hazard">&quot;Diseases of Astonishment&quot;</a> – a collaboration with <a href="https://mandygutmanngonzalez.com/">Mandy Gutmann-Gonzalez</a></p>
 <p><a href="https://www.instagram.com/bring_a_blanket/">Bring a Blanket</a> Zine Number One: &quot;crave&quot;</p>
@@ -20,7 +21,7 @@
 <p><a href="https://gifrenga.co">The Living Debt</a>: an <a href="https://github.com/williamthazard/gifrenga">open-source</a> GIF renga in collaboration with Robert David Carey</p>
 <p><a href="https://ghostproposal.com/">Ghost Proposal</a>: <a href="https://ghostproposal.com/William-Hazard">The Power of Then</a> – a <a href="https://github.com/williamthazard/krahenlied">krähenlied</a> encounter with Eckhart Tolle</p>
 <hr/>
-<p class='center'>updated 250430 – williamthazard [at] pm.me</p>
+<p class='center'>updated 251008 – williamthazard [at] pm.me</p>
 <p class='center'><a href='https://femishonuga.com/webring.html'>aelrsty</a> | <a href='https://bsky.app/profile/williamhazard.co'>bluesky</a> | <a href='https://post.lurk.org/@williamhazard'>mastodon</a></p>
 </div>
 </body>
